error no connection page

--- a/amorgos_echoes/lib/l10n/intl_el.arb
+++ b/amorgos_echoes/lib/l10n/intl_el.arb
@@ -31,10 +31,12 @@
   "emailSubject": "Επικοινωνία από την εφαρμογή",
   "emailBody": "Γεια σας, θα ήθελα να επικοινωνήσω.",
   "noEmailAppFound": "Δεν βρέθηκε εφαρμογή email στη συσκευή σας.",
-
   "emailCopied": "Το email αντιγράφηκε στο πρόχειρο",
-
-  "internetNotice": "Συνδέσου στο διαδίκτυο για να φορτωθούν όλα τα δεδομένα της εφαρμογής."
+  "internetNotice": "Συνδέσου στο διαδίκτυο για να φορτωθούν όλα τα δεδομένα της εφαρμογής.",
+  "reloadButton": "Επαναφόρτωση",
+  "offlineTitle": "Δεν υπάρχει σύνδεση",
+  "offlineMessage": "Παρακαλώ ελέγξτε τη σύνδεσή σας και δοκιμάστε ξανά.",
+  "retry": "Επανάληψη"
 
 
 }
